--- a/TD3.html
+++ b/TD3.html
@@ -12,7 +12,7 @@
 
     <body>
       <div id ="texteJQ"></div>
-        <canvas id="cv" width="600" height="800"></canvas>
+        <canvas id="cv" width="600" height="800" onfocus="alert()"></canvas>
 
         <script src = "game.js"></script>
     </body>
